<resources>
    <string name="app_name">ErikslustOnlineShop</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account"><u>CREATE AN ACCOUNT</u></string>

    <string name="err_msg_enter_first_name">Please enter your first name.</string>
    <string name="err_msg_enter_family_name">Please enter your family name.</string>
    <string name="err_msg_enter_email">Please enter your email address.</string>
    <string name="err_msg_enter_password">Please enter your password.</string>
    <string name="err_msg_enter_password_again">Please enter your password again.</string>
    <string name="err_msg_password_not_match">Password doesn\'t match.</string>


</resources>